--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -85,7 +85,7 @@ zsh_enabled:                  no
 # http://docs.ansible.com/ansible/playbooks_variables.html#variable-precedence-where-should-i-put-a-variable
 aptcachetime: 3600
 locale: "en_US.UTF-8"
-timezone: "Asia/Beirut"
+timezone: "America/New_York"
 chromium:
   set_default: false
   policy: false
