remove package throwing an error and add speedtest

--- a/roles/desktop/defaults/main.yml
+++ b/roles/desktop/defaults/main.yml
@@ -16,8 +16,8 @@ desktop:
     - 'mpv'
     - 'pinta'
     - 'rhythmbox'
-    - 'rxvt-unicode-256color'
     - 'sox'
+    - 'speedtest-cli'
     - 'tilda'
     - 'ubuntu-restricted-extras'
     - 'vlc'
